Piv#170116403 fix codified status facets hidden behind overflow by allowing word-break

--- a/frontend/assets/runcorn.css
+++ b/frontend/assets/runcorn.css
@@ -52,3 +52,9 @@
     font-weight: 900;
     content: "\f70e";
 }
+
+.search-listing-filter .facet,
+.search-listing-filter .facet-selected {
+    white-space: normal;
+    word-break: break-word;
+}
